# ev1MachineL

./: .dvcignore  .gitignore  AIRFLOW_DAG_TROUBLESHOOTING.md  AIRFLOW_TIMEOUT_FIX.md  ANALISIS_COMPARATIVO_EV3_FINAL.md  ANALISIS_EV3.md  ANALISIS_REQUISITOS.md  DOCKER_SETUP.md  Dockerfile  GUIA_DVC_GITHUB.md  GUIA_EJECUCION_COMPLETA.md  IMPLEMENTACION_UNSUPERVISED.md  INSTALACION_DVC.md  INSTRUCCIONES_EJECUCION.md  LICENSE  MEJORAS_APLICADAS.md  QUICK_START.md  README.md  README_FINAL.md  RESUMEN_IMPLEMENTACION.md  SOLUCION_AIRFLOW.md  SOLUCION_DAGS_ERROR.md  docker-compose.yml  dvc.yaml  jupyter_config.py  jupyter_notebook_config.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  start_jupyter.bat  start_jupyter.ps1  start_jupyter_final.bat  start_jupyter_simple.bat  start_project.bat  start_project.sh
.jupyter/: jupyter_notebook_config.py
conf/base/: catalog.yml
dags/: kedro_classification_dag.py  kedro_ml_dag.py  kedro_regression_dag.py  kedro_unsupervised_learning_dag.py
data/01_raw/: .gitkeep
data/02_intermediate/: .gitkeep
data/03_primary/: .gitkeep
notebooks/: Fase1.ipynb  Fase2.ipynb  Fase3.ipynb  Fase4_Clasificacion.ipynb  Fase4_Regresion.ipynb  Fase5_Evaluacion.ipynb  Fase6_Despliegue.ipynb  ev3.ipynb  final_df_us_2000s_2010s.parquet
scripts/: generate_report.py
src/letterboxdml/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/letterboxdml/pipelines/: __init__.py  data_preparation_pipeline.py  eda_pipeline.py  ml_modeling_pipeline.py
src/letterboxdml/pipelines/unsupervised_learning/: __init__.py  pipeline.py
(+8 files in other folders)
